deploy/k8s/base/interaction-gateway/management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interaction-gateway-management
  labels:
    app.kubernetes.io/name: interaction-gateway
    app.kubernetes.io/component: management
spec:
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: interaction-gateway
    app.kubernetes.io/component: external-gateway
  ports:
    - {name: team-grpc, port: 9443, targetPort: team-grpc, protocol: TCP}
