deploy/k8s/base/interaction-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interaction-gateway
  labels:
    app.kubernetes.io/name: interaction-gateway
spec:
  selector:
    app.kubernetes.io/name: interaction-gateway
    app.kubernetes.io/component: external-gateway
  ports:
    - {name: https, port: 8443, targetPort: https, protocol: TCP}
    - {name: metrics, port: 9090, targetPort: metrics, protocol: TCP}
